# epl-dashboard

./: .gitignore  README.md  app.py  data_processor.py  epl_2024_2025_full_stats.csv  pyproject.toml  requirements.txt  run_dashboard.sh
.github/workflows/: deploy.yml
views/: league_overview.py  player_dashboard.py
