[project]
name = "epl-dashboard"
version = "0.1.0"
description = "데이터시각화 6조 팀 프로젝트 - EPL 에이전트를 위한 선수 정보 시각화 대시보드"
readme = "README.md"
requires-python = ">=3.11.14"
dependencies = [
  "numpy==1.26.2",
  "pandas==2.1.4",
  "plotly==5.18.0",
  "streamlit==1.29.0",
  "streamlit-plotly-events==0.0.6",
]

[dependency-groups]
dev = [
    "pandas-stubs==2.3.2.250926",
]
